--- a/config_sample.env
+++ b/config_sample.env
@@ -1,10 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7880280577:AAEdZb3Pjj6JjqbJ_LTubHV2o7jLIcJgHq4"                              # Require restart after changing it while bot running
+OWNER_ID = "5707498585"                               # Require restart after changing it while bot running
+TELEGRAM_API = "25624824"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "3b705ab47b4018cb26c87b482a32a70a"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
@@ -22,7 +20,7 @@ INCOMPLETE_TASK_NOTIFIER = "False"
 SET_COMMANDS = "True"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
-FSUB_IDS = ""
+FSUB_IDS = "-1001918774095"
 BOT_PM = ""
 
 # GDrive Tools
@@ -34,7 +32,7 @@ USE_SERVICE_ACCOUNTS = "False"
 IS_TEAM_DRIVE = "False"
 STOP_DUPLICATE = "False"
 DISABLE_DRIVE_LINK = "False"
-GD_INFO = "Uploaded by WZML-X"
+GD_INFO = "Uploaded by BLACK HEART"
 
 # API's/Cookies
 REAL_DEBRID_API = ""
@@ -64,16 +62,16 @@ MEDIA_GROUP = "False"
 CAP_FONT = "code"
 LEECH_FILENAME_PREFIX = ""
 LEECH_FILENAME_SUFFIX = ""
-LEECH_FILENAME_CAPTION = ""
-LEECH_FILENAME_REMNAME = ""
+LEECH_FILENAME_CAPTION = "@blackheartmain {filename}"
+LEECH_FILENAME_REMNAME = "@blackheartmain {filename}"
 MIRROR_FILENAME_PREFIX = ""
 MIRROR_FILENAME_SUFFIX = ""
-MIRROR_FILENAME_REMNAME = ""
+MIRROR_FILENAME_REMNAME = "@blackheartmain {filename}"
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = ""
-MIRROR_LOG_ID = ""
-LINKS_LOG_ID = ""
+LEECH_LOG_ID = "-1002386071516"
+MIRROR_LOG_ID = "-1002266508599"
+LINKS_LOG_ID = "-1002485551215"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
@@ -91,8 +89,8 @@ RSS_DELAY = "600"
 RSS_CHAT = ""
 
 # Mega
-MEGA_EMAIL = ""
-MEGA_PASSWORD = ""
+MEGA_EMAIL = "fnxv1fthqa@bltiwd.com"
+MEGA_PASSWORD = "mamada@123"
 
 # Limits
 DAILY_TASK_LIMIT = ""
@@ -117,9 +115,9 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "WZ-M/L-X"
-AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/VJ_Botz"
+TITLE_NAME = "Black"
+AUTHOR_NAME = "Black Heart"
+AUTHOR_URL = "https://t.me/Blackheartmain"
 COVER_IMAGE = ""
 
 # Extra
