--- a/config_sample.env
+++ b/config_sample.env
@@ -6,11 +6,11 @@ TELEGRAM_HASH = "3b705ab47b4018cb26c87b482a32a70a"                          # Re
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://lijoyeh851:5qMST3omWWcMoOKV@cluster0.qtyhg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "+liSMeNJ-2GQ4NzA9"                       # Require restart after changing it while bot running
+SUDO_USERS = "5707498585"                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
