--- a/config_sample.env
+++ b/config_sample.env
@@ -62,11 +62,11 @@ MEDIA_GROUP = "False"
 CAP_FONT = "code"
 LEECH_FILENAME_PREFIX = ""
 LEECH_FILENAME_SUFFIX = ""
-LEECH_FILENAME_CAPTION = "@blackheartmain {filename}"
-LEECH_FILENAME_REMNAME = "@blackheartmain {filename}"
+LEECH_FILENAME_CAPTION = ""
+LEECH_FILENAME_REMNAME = ""
 MIRROR_FILENAME_PREFIX = ""
 MIRROR_FILENAME_SUFFIX = ""
-MIRROR_FILENAME_REMNAME = "@blackheartmain {filename}"
+MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel/SuperGroup (Topics Support)
 LEECH_LOG_ID = "-1002386071516"
