--- a/config_sample.env
+++ b/config_sample.env
@@ -115,7 +115,7 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "Black"
+TITLE_NAME = "Black-pytz"
 AUTHOR_NAME = "Black Heart"
 AUTHOR_URL = "https://t.me/Blackheartmain"
 COVER_IMAGE = ""
