--- a/config_sample.env
+++ b/config_sample.env
@@ -115,8 +115,8 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "Black-pytz"
-AUTHOR_NAME = "Black Heart"
+TITLE_NAME = "WZ-M/L-X"
+AUTHOR_NAME = "Black-heart"
 AUTHOR_URL = "https://t.me/Blackheartmain"
 COVER_IMAGE = ""
 
